--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ table td,table th{padding:0}
 .c10{margin-left:36pt;padding-top:9pt;padding-left:0pt;padding-bottom:0pt;line-height:1.15;orphans:2;widows:2;text-align:left}
 .c1{color:#000000;font-weight:700;text-decoration:none;vertical-align:baseline;font-size:12pt;font-family:"Ubuntu";font-style:normal}
 .c21{padding-top:0pt;padding-bottom:0pt;line-height:1.15;orphans:2;widows:2;text-align:center}
-.c11{padding-top:0pt;padding-bottom:0pt;line-height:1.15;orphans:2;widows:2;text-align:left}
 .c2{padding-top:0pt;padding-bottom:0pt;line-height:1.15;orphans:2;widows:2;text-align:left}
+.c11{padding-top:0pt;padding-bottom:0pt;line-height:1.15;orphans:2;widows:2;text-align:left}
 .c16{padding-top:9pt;padding-bottom:0pt;line-height:1.15;orphans:2;widows:2;text-align:left}
 .c3{color:#000000;text-decoration:none;vertical-align:baseline;font-size:11pt;font-style:normal}
 .c14{color:#000000;text-decoration:none;vertical-align:baseline;font-size:11pt;font-style:italic}
@@ -69,6 +69,7 @@ table td,table th{padding:0}
 .c25{font-size:11.5pt}
 .c17{font-size:12pt}
 .c27{font-style:italic}
+.c2{padding-top:0pt;padding-bottom:0pt;line-height:1.15;orphans:2;widows:2;text-align:right}
  
 .title{padding-top:24pt;color:#000000;font-weight:700;font-size:36pt;padding-bottom:6pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}
 .subtitle{padding-top:18pt;color:#666666;font-size:24pt;padding-bottom:4pt;font-family:"Georgia";line-height:1.15;page-break-after:avoid;font-style:italic;orphans:2;widows:2;text-align:left}
@@ -125,27 +126,27 @@ h6{padding-top:10pt;color:#000000;font-weight:700;font-size:10pt;padding-bottom:
 <ul class="c13 lst-kix_x1bb0819aje6-0 start">
 <li class="c2 c4">
 <span class="c5 c9">PostgreSQL:</span>
-<span class="c6 c0 c5">&nbsp;data mining in PgAdmin</span>
+<span class="c6 c0 c5"> data mining in PgAdmin</span>
 </li>
 <li class="c2 c4">
 <span class="c9 c5">C# Language Fundamentals:</span>
-<span class="c0 c5 c6">&nbsp;variables, data types, loops, conditional statements, exception handling, collections framework, I/O</span>
+<span class="c0 c5 c6"> variables, data types, loops, conditional statements, exception handling, collections framework, I/O</span>
 </li>
 <li class="c2 c4">
 <span class="c9 c5">Object Oriented Programming:</span>
-<span class="c6 c0 c5">&nbsp;classes and objects, interfaces, access modifiers, packages, the C# classpath, class modeling, encapsulation, inheritance, and polymorphism, UML class diagrams</span>
+<span class="c6 c0 c5"> classes and objects, interfaces, access modifiers, packages, the C# classpath, class modeling, encapsulation, inheritance, and polymorphism, UML class diagrams</span>
 </li>
 <li class="c2 c4">
 <span class="c9 c5">Web Application Development:</span>
-<span class="c6 c0 c5">&nbsp;HTML, CSS, Javascript, jQuery, Servlets, JSP, Spring Web MVC, Tomcat</span>
+<span class="c6 c0 c5"> HTML, CSS, Javascript, jQuery, Servlets, JSP, Spring Web MVC, Tomcat</span>
 </li>
 <li class="c2 c4">
 <span class="c9 c5">Database Programming:</span>
-<span class="c6 c0 c5">&nbsp;JDBC, table design and creation, SQL queries and DML, SQL Server, E/R diagrams</span>
+<span class="c6 c0 c5"> JDBC, table design and creation, SQL queries and DML, SQL Server, E/R diagrams</span>
 </li>
 <li class="c2 c4">
 <span class="c9 c5">Development tools and techniques:</span>
-<span class="c0 c5">&nbsp;Agile, unit testing (JUnit), integration testing, TDD, unix command line navigation, Git, Eclipse, Selenium, Cucumber</span>
+<span class="c0 c5"> Agile, unit testing (JUnit), integration testing, TDD, unix command line navigation, Git, Eclipse, Selenium, Cucumber</span>
 </li>
 </ul>
 <p class="c2 c7">
@@ -173,11 +174,11 @@ h6{padding-top:10pt;color:#000000;font-weight:700;font-size:10pt;padding-bottom:
 <li class="c10">
 <span class="c9 c5 c8">PostgreSQL </span>
 <span class="c9 c5 c8">query construction</span>
-<span class="c0 c5 c8">&nbsp;- pulled customer data based on past due order history for use in customer outreach (Klarna)</span>
+<span class="c0 c5 c8"> - pulled customer data based on past due order history for use in customer outreach (Klarna)</span>
 </li>
 <li class="c2 c23">
 <span class="c9 c5">Vending Machine Software </span>
-<span class="c6 c0 c5">- Wrote program in C# utilizing OOP principles and System.IO</span>
+<span class="c6 c0 c5"> - Wrote program in C# utilizing OOP principles and System.IO</span>
 </li>
 <li class="c2 c23">
 <span class="c9 c5">National Park Campground Reservation</span>
@@ -190,10 +191,9 @@ h6{padding-top:10pt;color:#000000;font-weight:700;font-size:10pt;padding-bottom:
 <p class="c2">
 <span class="c1">WORK EXPERIENCE</span>
 </p>
-<p class="c2">
-<span class="c9 c20">2Checkout, Columbus, OH&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-<span class="c9">&nbsp; &nbsp; &nbsp; &nbsp; </span>
-<span class="c3 c9">March-May 2017</span>
+<p>
+<span class="c2 c9 c20">2Checkout, Columbus, OH</span>
+<span class="c28 c3 c9">March-May 2017</span>
 </p>
 <p class="c2">
 <span class="c14 c0">Merchant Underwriting</span>
