inline block test

--- a/index.html
+++ b/index.html
@@ -1,7 +1,37 @@
 <html>
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="content-type">
-<style type="text/css">@import url('https://themes.googleusercontent.com/fonts/css?kit=S5z8ixiOoC4WJ1im6jAlYJlvwiGb5HFtYuzMPZlaOT8NZxoUIprA7rzik4iQiRuU');.lst-kix_wowiots7omjj-7>li:before{content:"\0025cb  "}.lst-kix_wowiots7omjj-6>li:before{content:"\0025cf  "}.lst-kix_wowiots7omjj-8>li:before{content:"\0025a0  "}.lst-kix_wowiots7omjj-5>li:before{content:"\0025a0  "}.lst-kix_urt7g3qu6e9u-5>li:before{content:"\0025a0  "}.lst-kix_urt7g3qu6e9u-6>li:before{content:"\0025cf  "}.lst-kix_x1bb0819aje6-7>li:before{content:"\0025cb  "}.lst-kix_urt7g3qu6e9u-7>li:before{content:"\0025cb  "}.lst-kix_x1bb0819aje6-4>li:before{content:"\0025cb  "}.lst-kix_x1bb0819aje6-8>li:before{content:"\0025a0  "}.lst-kix_urt7g3qu6e9u-8>li:before{content:"\0025a0  "}.lst-kix_x1bb0819aje6-5>li:before{content:"\0025a0  "}.lst-kix_x1bb0819aje6-6>li:before{content:"\0025cf  "}.lst-kix_x1bb0819aje6-1>li:before{content:"\0025cb  "}.lst-kix_x1bb0819aje6-0>li:before{content:"\0025cf  "}.lst-kix_x1bb0819aje6-3>li:before{content:"\0025cf  "}.lst-kix_x1bb0819aje6-2>li:before{content:"\0025a0  "}.lst-kix_urt7g3qu6e9u-4>li:before{content:"\0025cb  "}.lst-kix_urt7g3qu6e9u-3>li:before{content:"\0025cf  "}.lst-kix_urt7g3qu6e9u-1>li:before{content:"\0025cb  "}.lst-kix_urt7g3qu6e9u-0>li:before{content:"\0025cf  "}.lst-kix_urt7g3qu6e9u-2>li:before{content:"\0025a0  "}.lst-kix_k5e0ychy9sdj-0>li:before{content:"\0025cf  "}.lst-kix_k5e0ychy9sdj-1>li:before{content:"\0025cb  "}.lst-kix_k5e0ychy9sdj-2>li:before{content:"\0025a0  "}.lst-kix_k5e0ychy9sdj-3>li:before{content:"\0025cf  "}.lst-kix_k5e0ychy9sdj-5>li:before{content:"\0025a0  "}.lst-kix_k5e0ychy9sdj-4>li:before{content:"\0025cb  "}.lst-kix_k5e0ychy9sdj-7>li:before{content:"\0025cb  "}ul.lst-kix_x1bb0819aje6-7{list-style-type:none
+<style type="text/css">@import url('https://themes.googleusercontent.com/fonts/css?kit=S5z8ixiOoC4WJ1im6jAlYJlvwiGb5HFtYuzMPZlaOT8NZxoUIprA7rzik4iQiRuU');
+.lst-kix_wowiots7omjj-7>li:before{content:"\0025cb  "
+}.lst-kix_wowiots7omjj-6>li:before{content:"\0025cf  "
+}.lst-kix_wowiots7omjj-8>li:before{content:"\0025a0  "
+}.lst-kix_wowiots7omjj-5>li:before{content:"\0025a0  "
+}.lst-kix_urt7g3qu6e9u-5>li:before{content:"\0025a0  "
+}.lst-kix_urt7g3qu6e9u-6>li:before{content:"\0025cf  "
+}.lst-kix_x1bb0819aje6-7>li:before{content:"\0025cb  "
+}.lst-kix_urt7g3qu6e9u-7>li:before{content:"\0025cb  "
+}.lst-kix_x1bb0819aje6-4>li:before{content:"\0025cb  "
+}.lst-kix_x1bb0819aje6-8>li:before{content:"\0025a0  "
+}.lst-kix_urt7g3qu6e9u-8>li:before{content:"\0025a0  "
+}.lst-kix_x1bb0819aje6-5>li:before{content:"\0025a0  "
+}.lst-kix_x1bb0819aje6-6>li:before{content:"\0025cf  "
+}.lst-kix_x1bb0819aje6-1>li:before{content:"\0025cb  "
+}.lst-kix_x1bb0819aje6-0>li:before{content:"\0025cf  "
+}.lst-kix_x1bb0819aje6-3>li:before{content:"\0025cf  "
+}.lst-kix_x1bb0819aje6-2>li:before{content:"\0025a0  "
+}.lst-kix_urt7g3qu6e9u-4>li:before{content:"\0025cb  "
+}.lst-kix_urt7g3qu6e9u-3>li:before{content:"\0025cf  "
+}.lst-kix_urt7g3qu6e9u-1>li:before{content:"\0025cb  "
+}.lst-kix_urt7g3qu6e9u-0>li:before{content:"\0025cf  "
+}.lst-kix_urt7g3qu6e9u-2>li:before{content:"\0025a0  "
+}.lst-kix_k5e0ychy9sdj-0>li:before{content:"\0025cf  "
+}.lst-kix_k5e0ychy9sdj-1>li:before{content:"\0025cb  "
+}.lst-kix_k5e0ychy9sdj-2>li:before{content:"\0025a0  "
+}.lst-kix_k5e0ychy9sdj-3>li:before{content:"\0025cf  "
+}.lst-kix_k5e0ychy9sdj-5>li:before{content:"\0025a0  "
+}.lst-kix_k5e0ychy9sdj-4>li:before{content:"\0025cb  "
+}.lst-kix_k5e0ychy9sdj-7>li:before{content:"\0025cb  "
+}ul.lst-kix_x1bb0819aje6-7{list-style-type:none
 }ul.lst-kix_urt7g3qu6e9u-6{list-style-type:none
 }ul.lst-kix_x1bb0819aje6-6{list-style-type:none
 }ul.lst-kix_urt7g3qu6e9u-7{list-style-type:none
@@ -14,7 +44,8 @@
 }ul.lst-kix_x1bb0819aje6-4{list-style-type:none
 }ul.lst-kix_x1bb0819aje6-1{list-style-type:none
 }ul.lst-kix_x1bb0819aje6-0{list-style-type:none
-}.lst-kix_k5e0ychy9sdj-8>li:before{content:"\0025a0  "}ul.lst-kix_k5e0ychy9sdj-0{list-style-type:none
+}.lst-kix_k5e0ychy9sdj-8>li:before{content:"\0025a0  "
+}ul.lst-kix_k5e0ychy9sdj-0{list-style-type:none
 }ul.lst-kix_wowiots7omjj-8{list-style-type:none
 }ul.lst-kix_wowiots7omjj-6{list-style-type:none
 }ul.lst-kix_urt7g3qu6e9u-2{list-style-type:none
@@ -30,10 +61,15 @@
 }ul.lst-kix_urt7g3qu6e9u-0{list-style-type:none
 }ul.lst-kix_wowiots7omjj-1{list-style-type:none
 }ul.lst-kix_urt7g3qu6e9u-1{list-style-type:none
-}.lst-kix_wowiots7omjj-0>li:before{content:"\0025cf  "}.lst-kix_wowiots7omjj-1>li:before{content:"\0025cb  "}ul.lst-kix_k5e0ychy9sdj-6{list-style-type:none
-}.lst-kix_wowiots7omjj-3>li:before{content:"\0025cf  "}ul.lst-kix_k5e0ychy9sdj-5{list-style-type:none
+}.lst-kix_wowiots7omjj-0>li:before{content:"\0025cf  "
+}.lst-kix_wowiots7omjj-1>li:before{content:"\0025cb  "
+}ul.lst-kix_k5e0ychy9sdj-6{list-style-type:none
+}.lst-kix_wowiots7omjj-3>li:before{content:"\0025cf  "
+}ul.lst-kix_k5e0ychy9sdj-5{list-style-type:none
 }ul.lst-kix_k5e0ychy9sdj-8{list-style-type:none
-}.lst-kix_wowiots7omjj-2>li:before{content:"\0025a0  "}.lst-kix_wowiots7omjj-4>li:before{content:"\0025cb  "}ul.lst-kix_k5e0ychy9sdj-7{list-style-type:none
+}.lst-kix_wowiots7omjj-2>li:before{content:"\0025a0  "
+}.lst-kix_wowiots7omjj-4>li:before{content:"\0025cb  "
+}ul.lst-kix_k5e0ychy9sdj-7{list-style-type:none
 }ul.lst-kix_k5e0ychy9sdj-2{list-style-type:none
 }ul.lst-kix_k5e0ychy9sdj-1{list-style-type:none
 }ul.lst-kix_k5e0ychy9sdj-4{list-style-type:none
@@ -69,6 +105,8 @@ table td,table th{padding:0}
 .c25{font-size:11.5pt}
 .c17{font-size:12pt}
 .c27{font-style:italic}
+.c28{display: inline-block vertical-align:top}
+.c29{text-align:left}
  
 .title{padding-top:24pt;color:#000000;font-weight:700;font-size:36pt;padding-bottom:6pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}
 .subtitle{padding-top:18pt;color:#666666;font-size:24pt;padding-bottom:4pt;font-family:"Georgia";line-height:1.15;page-break-after:avoid;font-style:italic;orphans:2;widows:2;text-align:left}
@@ -191,7 +229,8 @@ h6{padding-top:10pt;color:#000000;font-weight:700;font-size:10pt;padding-bottom:
 <span class="c1">WORK EXPERIENCE</span>
 </p>
 <p class="c2">
-<span class="c3 c9 c20">2Checkout, Columbus, OH                                                                    March-May 2017</span>
+<span class="c28 c9 c20">2Checkout, Columbus, OH</span>
+<span class="c28 c29 c3 c9">March-May 2017</span>
 </p>
 <p class="c2">
 <span class="c14 c0">Merchant Underwriting</span>
