--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ table td,table th{padding:0}
 .c17{font-size:12pt}
 .c27{font-style:italic}
 .c28{display: inline-block vertical-align:top}
-.c29{text-align:left}
+.c29{text-align:right}
  
 .title{padding-top:24pt;color:#000000;font-weight:700;font-size:36pt;padding-bottom:6pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}
 .subtitle{padding-top:18pt;color:#666666;font-size:24pt;padding-bottom:4pt;font-family:"Georgia";line-height:1.15;page-break-after:avoid;font-style:italic;orphans:2;widows:2;text-align:left}
