--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ table td,table th{padding:0}
 .c17{font-size:12pt}
 .c27{font-style:italic}
 .c28{display: inline-block vertical-align:top}
-.c29{text-align:right}
+.c29{padding-top:0pt;padding-bottom:0pt;line-height:1.15;orphans:2;widows:2;text-align:right}
  
 .title{padding-top:24pt;color:#000000;font-weight:700;font-size:36pt;padding-bottom:6pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}
 .subtitle{padding-top:18pt;color:#666666;font-size:24pt;padding-bottom:4pt;font-family:"Georgia";line-height:1.15;page-break-after:avoid;font-style:italic;orphans:2;widows:2;text-align:left}
@@ -228,8 +228,8 @@ h6{padding-top:10pt;color:#000000;font-weight:700;font-size:10pt;padding-bottom:
 <p class="c2">
 <span class="c1">WORK EXPERIENCE</span>
 </p>
-<p class="c2">
-<span class="c28 c9 c20">2Checkout, Columbus, OH</span>
+<p>
+<span class="c2 c28 c9 c20">2Checkout, Columbus, OH</span>
 <span class="c28 c29 c3 c9">March-May 2017</span>
 </p>
 <p class="c2">
