--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@ h6{padding-top:10pt;color:#000000;font-weight:700;font-size:10pt;padding-bottom:
 <span class="c1">WORK EXPERIENCE</span>
 </p>
 <p>
-<span class="c2 c28 c9 c20">2Checkout, Columbus, OH</span>
-<span class="c28 c29 c3 c9">March-May 2017</span>
+<div class="c2 c28 c9 c20">2Checkout, Columbus, OH</div>
+<div class="c28 c29 c3 c9">March-May 2017</div>
 </p>
 <p class="c2">
 <span class="c14 c0">Merchant Underwriting</span>
