--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ table td,table th{padding:0}
 .c25{font-size:11.5pt}
 .c17{font-size:12pt}
 .c27{font-style:italic}
-.c28{display: inline-block vertical-align:top}
+.c28{display: inline-block}
 .c29{padding-top:0pt;padding-bottom:0pt;line-height:1.15;orphans:2;widows:2;text-align:right}
  
 .title{padding-top:24pt;color:#000000;font-weight:700;font-size:36pt;padding-bottom:6pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}
