--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@ h6{padding-top:10pt;color:#000000;font-weight:700;font-size:10pt;padding-bottom:
 <p class="c2">
 <span class="c1">WORK EXPERIENCE</span>
 </p>
-<p>
-<div class="c2 c28 c9 c20">2Checkout, Columbus, OH</div>
-<div class="c28 c29 c3 c9">March-May 2017</div>
+<p class="c28 c2 c9 c20">2Checkout, Columbus, OH>
+</p>
+<p class="c28 c29 c3 c9">March-May 2017>
 </p>
 <p class="c2">
 <span class="c14 c0">Merchant Underwriting</span>
